# sightradar-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sightradar/: __init__.py  client.py  errors.py  models.py
tests/: test_search_score.py
