[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sightradar"
version = "1.0.0"
description = "Official Python client for the SightRadar face recognition API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "SightRadar" }]
keywords = ["face recognition", "facial recognition", "api", "sightradar", "rekognition"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
# Zero runtime dependencies — built on the standard library.
dependencies = []

[project.urls]
Homepage = "https://sightradar.com"
Documentation = "https://sightradar.com/docs"
Source = "https://github.com/sightradar-hq/sightradar-python"

[tool.hatch.build.targets.wheel]
packages = ["src/sightradar"]
